--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ChoreActivity"
+            android:targetActivity=".ChoreActivity">
+
+        </activity>
         <activity android:name=".ChoreListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -14,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChorePagerActivity"
+                  android:parentActivityName=".ChoreListActivity"
             android:label="@string/app_name">
 
         </activity>
